--- a/src/Components/CardPokemon/CardPokemon.scss
+++ b/src/Components/CardPokemon/CardPokemon.scss
@@ -19,7 +19,7 @@ article {
   text-align: center;
   transition: transform 1s;
   transform-style: preserve-3d;
-  border: 10px solid grey; /* #3d7a6bb3 */
+  border: 10px solid grey; 
   background-color: grey;
   width: calc(100% - 20px);
   -webkit-box-shadow: -1px 2px 13px 0px rgba(0, 0, 0, 0.74);
@@ -27,7 +27,7 @@ article {
 }
 
 article[data-reverse='true'] .cardInner {
-  //   .box:hover .cardInner {
+
   transform: rotateY(180deg);
 }
 
@@ -73,12 +73,12 @@ picture {
 }
 
 figcaption {
-  background-color: rgba(255, 255, 255, 0.5); /* #3d7a6b80 */
+  background-color: rgba(255, 255, 255, 0.5); 
   position: relative;
   border-radius: 0 0 10px 10px;
 }
 
-ol {
+ul {
   list-style: none;
   margin: 0;
   padding: 15px;
@@ -95,7 +95,7 @@ h2 {
   justify-content: center;
 }
 
-/*Réinitilaisation de la liste déroulante*/
+
 select {
   appearance: none;
   outline: 0;
@@ -112,7 +112,7 @@ select {
   cursor: pointer;
 }
 
-.types {
+.type {
   background-color: #000;
   color: #fff;
   padding: 5px 10px;
@@ -122,7 +122,7 @@ select {
   border-radius: 5px;
 }
 
-/* Filtres types */
+
 #types {
   display: flex;
   justify-content: space-around;
@@ -151,7 +151,7 @@ select {
   }
 }
 
-/* Mise en place de la flèche */
+
 .select {
   position: relative;
   width: 350px;
